fix(docs): spacing in header

--- a/packages/docs/src/app/_components/layout/HeaderNavigation/HeaderNavigation.module.scss
+++ b/packages/docs/src/app/_components/layout/HeaderNavigation/HeaderNavigation.module.scss
@@ -1,3 +1,4 @@
 .navigation ul {
   flex-direction: row;
+  gap: var(--navigation--item-to-item-spacing)
 }
